Minor performance tweaks